--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ body{
 
 #main_header{
     width: 100%;
-    background-color: bisque;
+    background-color: navajowhite;
     padding: 10px 0px;
 }
 
