--- a/Css/style.css
+++ b/Css/style.css
@@ -139,7 +139,7 @@ body{
     }
     
     #header_background{
-        background-color: navajowhite;
+        background-color: yellowgreen;
         width: 100%;
     }
     
@@ -153,7 +153,7 @@ body{
     
     #header_content h1 a{
         line-height: 50px;
-        font-weight: normal;
+        font-weight: bold;
         color: black;
         text-decoration: none;
     }
@@ -164,7 +164,7 @@ body{
     
     #header_content ul li{
         display: inline;
-        margin: 0px 10px;
+        margin: 0px 8px;
     }
     
     #header_content ul li a{
@@ -182,16 +182,19 @@ body{
     }
     
     #nav_content{
+        display: none;
         width: 100%;
         padding: 100px 0px;
         background-color: yellowgreen;
     }
     
     #nav_content h1{
+        display: none;
         text-align: center;
     }
     
     #nav_content h1 a{
+        display: none;
         color: black;
         text-decoration: none;
         cursor: pointer;
@@ -200,6 +203,7 @@ body{
     }
     
     #nav_content h2{
+        display: none;
         text-align: center;
         font-weight: normal;
         font-size: 30px;
@@ -207,23 +211,23 @@ body{
     
     #main_header{
         width: 100%;
-        background-color: navajowhite;
+        background-color: palegoldenrod;
         padding: 10px 0px;
     }
     
     #main_header h1{
         text-align: center;
-        font-size: 50px;
+        font-size: 30px;
     }
     
     #main_body_background{
         width: 100%;
-        background-color: orange;
+        background-color: yellowgreen;
         padding: 50px 0px;
     }
     
     #main_body_content{
-        width: 80%;
+        width: 100%;
         margin: auto;
     }
     
@@ -236,13 +240,13 @@ body{
     #text h1{
         font-weight: normal;
         margin-bottom: 20px;
-        font-size: 3vw;
+        font-size: 5vw;
     }
     
     #footer_background{
         width: 100%;
-        background-color: lightcoral;
-        padding: 50px 0px;
+        background-color: burlywood;
+        padding: 30px 0px;
     }
     
     #footer_content{
@@ -252,6 +256,7 @@ body{
     
     #footer_content h1{
         text-align: center;
+        font-size: 25px;
     }
 
 }
